# TeedohKinter

./: README.md  pyproject.toml
teedoh_kinter/: __init__.py  components.py
teedoh_kinter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
