[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "teedoh_kinter"
version = "0.1.3"
authors = [{ name = "Teedoh", email = "teedohtrackz@gmail.com" }]
description = "A superset of TKinter with prebuilt components for straightforward frontends"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []
